# MASEval

./: .gitignore  AGENTS.md  ARECRITICALASSESSMENT.md  AREISSUES.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONVERSE.md  Callbacks | LangChain Reference.html  FIXES.md  GAIA2BUG.md  IDEA.md  LANGCHAIN.md  LLAMAINDEXCALLBACK.md  LLAMAINDEXINSTRUMENT.md  MULTIAGENTBENCHITERATIONBUG.md  OVERVIEW.md  PLAN.md  PLANS.md  PLANS2.md  README.md  STRATEGY.md  TAU2MACS.md  TESTINGPLAN.md  index.html  mkdocs.yml  pyproject.toml
.github/: RELEASE.md
.github/workflows/: publish.yml  test.yml
assets/: script.js  style.css
docs/: index.md
docs/benchmark/: converse.md  gaia2.md  index.md  macs.md  mmlu.md  multiagentbench.md  tau2.md
docs/examples/: index.md
docs/getting-started/: faq.md  quickstart.md
docs/guides/: index.md  seeding.md  usage-tracking.md
docs/interface/agents/: camel.md  langgraph.md  llamaindex.md  smolagents.md
docs/interface/environments/: are.md
docs/interface/inference/: anthropic.md  google_genai.md  huggingface.md  litellm.md  openai.md
docs/reference/: agent.md  benchmark.md  callback.md  environment.md  evaluator.md  exceptions.md  history.md  model.md  scorer.md  seeding.md  simulator.md  task.md  usage.md  user.md  utilities.md
docs/superpowers/plans/: 2026-03-22-add-instructor-library.md  2026-03-27-are-environment.md  2026-03-28-are-fixes-gaia2-simplification.md  2026-03-29-rename-task-data-to-environment-data.md  2026-04-10-are-integration-quality-fixes.md
docs/superpowers/specs/: 2026-03-27-are-environment-design.md
examples/colbench_benchmark/: README.md  colbench.py  colbench_benchmark.py  evaluate_code.py
examples/converse_benchmark/: __init__.py  converse_benchmark.py  default_converse_benchmark.py
examples/five_a_day_benchmark/: README.md  five_a_day_benchmark.ipynb  five_a_day_benchmark.py  utils.py
examples/gaia2_benchmark/: __init__.py  gaia2_benchmark.py  gaia2_mwe.py
examples/introduction/: tutorial.ipynb
examples/macs_benchmark/: macs_benchmark.py
examples/mmlu_benchmark/: README.md  mmlu_benchmark.py
examples/tau2_benchmark/: tau2_benchmark.py
maseval/: __init__.py
maseval/benchmark/colbench/: __init__.py  agent.py  colbench.py  environment.py  evaluator.py  openai_model_adapter.py  user.py  vllm_agent.py
maseval/benchmark/converse/: .gitignore  __init__.py  config.py  converse.py  data_loader.py  environment.py  evaluator.py  external_agent.py
maseval/benchmark/gaia2/: PROVENANCE.md  __init__.py  data_loader.py  environment.py  evaluator.py  gaia2.py  tool_wrapper.py
maseval/benchmark/macs/: macs.py
maseval/benchmark/mmlu/: __init__.py  mmlu.py
maseval/benchmark/multiagentbench/: PROVENANCE.md  README.md  __init__.py  _constants.py  data_loader.py  environment.py  evaluator.py  multiagentbench.py
maseval/benchmark/tau2/: PROVENANCE.md  __init__.py  environment.py  evaluator.py  tau2.py  utils.py
maseval/core/: agent.py  benchmark.py  config.py  cost.py  environment.py  evaluator.py  exceptions.py  history.py  instructor.py  model.py  registry.py  reporting.py  scorer.py  seeding.py  simulator.py  task.py  tracing.py  usage.py  user.py
maseval/core/callbacks/: result_logger.py
maseval/core/utils/: system_info.py
maseval/interface/: __init__.py  cost.py  usage.py
maseval/interface/agents/: __init__.py  _cost.py  camel.py  langgraph.py  llamaindex.py  smolagents.py  smolagents_optional.py
maseval/interface/environments/: __init__.py  are.py  are_tool_wrapper.py
maseval/interface/inference/: __init__.py  anthropic.py  google_genai.py  huggingface.py  huggingface_scorer.py  litellm.py  openai.py
scripts/: bump_version.py  coverage_by_feature.py
specs/: eval-from-traces.md
tests/: README.md  conftest.py  markers.py
tests/interface/environments/: test_are_environment.py  test_are_integration.py  test_are_tool_wrapper.py
tests/test_benchmarks/test_converse/: __init__.py  test_converse.py  test_data_integrity.py
tests/test_benchmarks/test_gaia2/: __init__.py  conftest.py  test_benchmark.py  test_data_integrity.py  test_data_loader.py  test_default_agent.py  test_environment.py  test_evaluator.py  test_integration.py  test_tool_wrapper.py
tests/test_benchmarks/test_macs/: conftest.py  test_data_integrity.py  test_macs_benchmark.py  test_macs_environment.py  test_macs_integration.py  test_macs_integration_real_data.py  test_macs_user.py
tests/test_benchmarks/test_mmlu/: conftest.py  test_data_integrity.py  test_mmlu_unit.py
tests/test_benchmarks/test_multiagentbench/: conftest.py  test_benchmark.py  test_data_integrity.py  test_data_loader.py  test_environment.py  test_evaluator.py  test_integration_real_data.py  test_marble_adapter.py
tests/test_benchmarks/test_tau2/: conftest.py  test_benchmark.py  test_data_integrity.py  test_data_loader.py  test_default_agent.py  test_environment.py  test_evaluator.py  test_initialization.py  test_integration.py  test_user.py  test_utils.py
tests/test_contract/: test_agent_adapter_contract.py  test_collection_contract.py  test_model_adapter_contract.py
tests/test_core/: test_agentic_user.py  test_callback_handler.py  test_evaluator.py  test_exceptions.py  test_history.py  test_instructor.py  test_llm_simulator.py  test_message_history.py  test_message_tracing_callback.py  test_model_adapter.py  test_queue.py  test_registry.py  test_scorer.py  test_seeding.py  test_system_info.py  test_task_freeze.py  test_task_protocol.py  test_usage.py  test_user.py
tests/test_core/test_benchmark/: test_automatic_registration.py  test_benchmark_lifecycle.py  test_config_collection.py  test_execution_loop.py  test_report_schema.py  test_seeding_integration.py  test_trace_collection.py  test_usage_collection.py
tests/test_core/test_callbacks/: test_file_result_logger.py  test_progress_bar.py  test_result_logger.py
tests/test_interface/test_agent_integration/: test_camel_integration.py  test_langgraph_integration.py  test_llamaindex_integration.py  (+1 more)
usage_tracking/: PLAN.md  api_usage_results.json  api_usage_test.py
(+69 files in other folders)
